fix: Card spacing, title colors, link underlines

--- a/src/aics-image-viewer/components/ChannelsWidget/styles.css
+++ b/src/aics-image-viewer/components/ChannelsWidget/styles.css
@@ -75,7 +75,7 @@
     }
 
     .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-arrow {
-      transform: translateY(-320%);
+      transform: translateY(-300%);
       position: absolute;
       left: 16px;
     }
